# async-xenapi

./: .env.example  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: publish.yml
javascript/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
javascript/src/: XenAPI.ts
javascript/tests/: getXapiVersion.test.ts
python/: README.md  pyproject.toml
python/examples/: .env.example  README.md  create-vm-async.py  vnc-direct.py  xs_common.py  xsvm.py
python/src/async_xenapi/: __init__.py  session.py
python/tests/: conftest.py  test_benchmark.py  test_get_xapi_version.py
