[project]
name = "async-xenapi"
version = "1.0.3"
description = "An async library for XenAPI"
readme = "README.md"
license = { text = "LGPL-2.1-only" }
authors = [{ name = "Su Fei", email = "acefei@163.com" }]
requires-python = ">=3.14"
dependencies = ["aiohttp>=3.9"]
keywords = ["xenserver", "xen-api", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/acefei/async-xenapi"
Repository = "https://github.com/acefei/async-xenapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/async_xenapi"]

[tool.hatch.build.targets.sdist]
only-include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["async_xenapi"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "class"
asyncio_default_test_loop_scope = "class"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "ruff>=0.15.2",
    "xenapi>=26.5.0",
]
